syntax = "proto3";

message Alert {
  string id = 1;
  string header = 2;
  string description = 3;
}

message AlertFeedMessage {
  repeated Alert entity = 1;
}
