syntax = "proto3";

message TripUpdate {
  string trip_id = 1;
  string vehicle_id = 2;
  string stop_id = 3;
  uint64 timestamp = 4;
}

message TripUpdateFeedMessage {
  repeated TripUpdate entity = 1;
}
